--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/web/Cellular AutoBata.html"
+export_path="export/web/CellularAutoBata.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -53,7 +53,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/win/Cellular AutoBata.exe"
+export_path="export/win/CellularAutoBata.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
