icon and splash screen updates

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,7 +3,7 @@
 name="Web"
 platform="Web"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -16,7 +16,7 @@ encryption_exclude_filters=""
 seed=0
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=0
+script_export_mode=1
 
 [preset.0.options]
 
@@ -28,7 +28,11 @@ vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell=""
-html/head_include=""
+html/head_include="<style>
+#status-progress {
+	accent-color: #8a009a;
+}
+</style>"
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
@@ -47,7 +51,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -66,8 +70,8 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
-binary_format/embed_pck=false
+debug/export_console_wrapper=2
+binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
